--- a/sara/credenciais/conexao_twitter.py.template
+++ b/sara/credenciais/conexao_twitter.py.template
@@ -9,7 +9,7 @@ import twitter
 def inicia_conexao():
     """Abre a conexão com a api do twitter"""
     api = twitter.Api(
-        consumer_key='YOUR consumer_key',
+        consumer_key='YOUR consumer_keysd',
         consumer_secret='YOUR consumer_secret',
         access_token_key='YOUR access_token_key',
         access_token_secret='YOUR access_token_secret',
@@ -17,4 +17,3 @@ def inicia_conexao():
         tweet_mode='extended',
     )
     return api
-
