--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,7 @@ pylint args = --disable=too-few-public-methods,too-many-instance-attribute
 
 [flake8]
 per-file-ignores = __init__.py:F401, F403
+
+[coverage:report]
+skip_empty = True
+
