--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ matplotlib==3.4.3
 networkx==2.5
 nltk==3.6.2
 numpy==1.21.2
+emoji==1.4.2
 pandas==1.3.2
 pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.1.0/pt_core_news_sm-3.1.0.tar.gz
 pymongo==3.12.0
