--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,79 @@
+astroid==2.11.7
+attrs==22.1.0
+blis==0.7.8
+botometer==1.6
+catalogue==2.0.8
+certifi==2022.6.15
+charset-normalizer==2.0.12
+click==7.1.2
+coverage==6.4.3
+cycler==0.11.0
+cymem==2.0.6
+decorator==5.1.1
+dill==0.3.5.1
+docopt==0.6.2
+emoji==1.4.2
+future==0.18.2
 gensim==4.1.0
+idna==3.3
+iniconfig==1.1.1
+isort==5.10.1
+Jinja2==3.1.2
+joblib==1.1.0
+kiwisolver==1.4.4
+langcodes==3.3.0
+lazy-object-proxy==1.7.1
+MarkupSafe==2.1.1
 matplotlib==3.4.3
+mccabe==0.7.0
+murmurhash==1.0.7
 networkx==2.5
 nltk==3.6.6
 numpy==1.21.2
-emoji==1.4.2
+oauthlib==3.2.0
+packaging==21.3
 pandas==1.3.2
-pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.1.0/pt_core_news_sm-3.1.0.tar.gz
+pathy==0.6.2
+Pillow==9.2.0
+platformdirs==2.5.2
+pluggy==0.13.1
+preshed==3.0.6
+pt-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.4.0/pt_core_news_sm-3.4.0.tar.gz
+py==1.11.0
+pycodestyle==2.9.1
+pydantic==1.8.2
+pylint==2.14.5
 pymongo==3.12.0
-python-twitter==3.5
-requests==2.26.0
-scipy==1.7.1
-spacy==3.1.2
-wordcloud==1.8.1
-scikit-learn==0.24.2
+pyparsing==3.0.9
+PySocks==1.7.1
 pytest==6.2.4
 pytest-cov==2.11.1
 pytest-runner==5.3.0
-yala==3.0.1
+python-dateutil==2.8.2
+python-twitter==3.5
+pytz==2022.2.1
+regex==2022.7.25
+requests==2.26.0
+requests-oauthlib==1.3.1
+scikit-learn==0.24.2
+scipy==1.7.1
+six==1.16.0
+smart-open==5.2.1
+spacy==3.4.1
+spacy-legacy==3.0.9
+spacy-loggers==1.0.3
+srsly==2.4.4
+thinc==8.1.0
+threadpoolctl==3.1.0
+toml==0.10.2
+tomli==2.0.1
+tomlkit==0.11.4
+tqdm==4.64.0
 tweepy==3.10.0
-botometer==1.6
+typer==0.3.2
+typing_extensions==4.3.0
+urllib3==1.26.11
+wasabi==0.10.1
+wordcloud==1.8.1
+wrapt==1.14.1
+yala==3.0.1
